--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="stylesheet" href="https://use.typekit.net/jxc8ett.css" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
