--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-  <!-- <link rel="stylesheet" href="https://use.typekit.net/jxc8ett.css" /> -->
+  <link rel="stylesheet" href="https://use.typekit.net/jxc8ett.css" />
   <link rel="stylesheet" href="https://use.typekit.net/bsz6dog.css">
   <meta name="viewport" content="width=device-width" />
   %sveltekit.head%
