--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <link rel="stylesheet" href="https://use.typekit.net/jxc8ett.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/unc3ivy.css">
   <link rel="stylesheet" href="https://use.typekit.net/bsz6dog.css">
   <meta name="viewport" content="width=device-width" />
   %sveltekit.head%
